feat: major refactor — new news sources, stage-based UI, news articles store
- Add 6 new Indian news sources (BSE, Economic Times, Google News, Moneycontrol, NSE, Reddit India Investments)
- Introduce NewsArticle domain entity, repository, and store impl
- Add Flyway migration V18 for news_articles table
- Refactor dashboard to stage-based detail components with accordion layout
- Delete old sentiment panels (ScoreCard, SourceBreakdown, StageSummaryCard, etc.)
- Update backtest engine, signal engine, and composite analysis service
- Add CI/CD comprehensive workflow and planning docs